Add another --add-opens= flag to installation instructions
https://github.com/google/error-prone/issues/1157#issuecomment-801075269